# game_engine

./: CMakeLists.txt  imgui.ini  run.sh
include/: asset_manager.hpp  bounding_box.hpp  callbacks.hpp  camera_movement_script.hpp  change_color_script.hpp  common_headers.hpp  engine.hpp  engine_config.hpp  game_object.hpp  game_object_builder.hpp  input_state.hpp  material.hpp  material_builder.hpp  mesh.hpp  object_loader.hpp  raycasting.hpp  render.hpp  scene.hpp  shader.hpp  shader_utils.hpp  skybox.hpp  structs.hpp  texture.hpp  texture_loader.hpp  utils.hpp
include/components/: camera_component.hpp  component.hpp  material_component.hpp  render_mesh_component.hpp  script_component.hpp  transform_component.hpp
include/glad/: glad.h
src/: asset_manager.cpp  callbacks.cpp  engine.cpp  engine_config.cpp  glad.c  input_state.cpp  main.cpp  material.cpp  mesh.cpp  object_loader.cpp  raycasting.cpp  render.cpp  shader.cpp  shader_utils.cpp  skybox.cpp  texture_loader.cpp  utils.cpp
src/shaders/quad/: fragment.glsl
src/shaders/simple/: fragment.glsl  vertex.glsl
src/shaders/skybox/: skybox_vertex_shader.glsl
src/shaders/urp/: fragment.glsl
src/shaders/utah/: fragment_shader.glsl
